separate configuration for different content types + initial changes to add feedback button and remove current UI pop up to allow/deny
